--- a/site/dashboard.html
+++ b/site/dashboard.html
@@ -8,12 +8,12 @@
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.11.2/css/bootstrap-select.min.css">
       <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
       <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.11.2/js/bootstrap-select.min.js"></script>
-      <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,600,200italic,600italic&subset=latin,vietnamese' rel='stylesheet' type='text/css'>
+      <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,600,200italic,600italic&subset=latin,vietnamese' rel='stylesheet' type='text/css'>
       <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
       <link rel="stylesheet" href="css/d3.slider.css">
       <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
       <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-      <script src="http://vizjs.org/viz.v1.1.0.min.js"></script>
+      <script src="https://vizjs.org/viz.v1.1.0.min.js"></script>
       <script type="text/javascript" src="js/sahana.js"></script>
       <script type="text/javascript" src = "js/tree.js"></script>
       <link rel="stylesheet" type="text/css" href="css/tree2.css">
