change to js folder

--- a/site/dashboard.html
+++ b/site/dashboard.html
@@ -13,7 +13,7 @@
       <link rel="stylesheet" href="css/d3.slider.css">
       <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
       <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-      <script src="http://vizjs.org/viz.v1.1.0.min.js"></script>
+      <script src="js/viz.v1.1.0.min.js"></script>
       <script type="text/javascript" src="js/sahana.js"></script>
       <script type="text/javascript" src = "js/tree.js"></script>
       <link rel="stylesheet" type="text/css" href="css/tree2.css">
