--- a/site/dashboard.html
+++ b/site/dashboard.html
@@ -96,7 +96,7 @@
           
              //document.getElementById("blahdiv").innerHTML = "";
           $("#questionsContainer").css("display","none");
-          $('#blahdiv').css("display","none");    
+          //$('#blahdiv').css("display","none");    
          
            //console.log("Full of shit")
            document.getElementById('Sizeview').addEventListener('change', function() {
