--- a/site/reports.html
+++ b/site/reports.html
@@ -92,6 +92,7 @@
       .prev:hover,
       .next:hover {
       background-color: rgba(0, 0, 0, 0.8);
+      margin-left: 0px;
       }
       /* Number text (1/3 etc) */
       .numbertext {
@@ -103,6 +104,7 @@
       }
       img {
       margin-bottom: -4px;
+ 
       }
       .caption-container {
       text-align: center;
@@ -165,16 +167,16 @@
                <p id="caption"></p>
             </div>
             <div class="column">
-               <img class="demo cursor" src="img/Pain.png" style="width:50%" onclick="currentSlide(1)" alt="Pain Infographic">
+               <img class="demo cursor" src="img/Pain.png" style="width:100%" onclick="currentSlide(1)" alt="Pain Infographic">
             </div>
             <div class="column">
-               <img class="demo cursor" src="img/Pregnancy.png" style="width:50%" onclick="currentSlide(2)" alt="Pregnancy Infographic">
+               <img class="demo cursor" src="img/Pregnancy.png" style="width:100%" onclick="currentSlide(2)" alt="Pregnancy Infographic">
             </div>
             <div class="column">
-               <img class="demo cursor" src="img/Vision.png" style="width:50%" onclick="currentSlide(3)" alt="Vision Infographic">
+               <img class="demo cursor" src="img/Vision.png" style="width:100%" onclick="currentSlide(3)" alt="Vision Infographic">
             </div>
             <div class="column">
-               <img class="demo cursor" src="img/Intercourse.png" style="width:50%" onclick="currentSlide(4)" alt="Intercourse Infographic">
+               <img class="demo cursor" src="img/Intercourse.png" style="width:100%" onclick="currentSlide(4)" alt="Intercourse Infographic">
             </div>
          </div>
       </div>
